syntax = "proto3";

package calculatorpb;
option go_package="/pb";

// Calculator struct
message Calculator {
    int64 a = 1;
    int64 b = 2;
}

// Calculator request
message CalculatorRequest {
    Calculator req = 1;
}

// Calculator response
message CalculatorResponse {
    int64 res = 1;
}

message SquareRootRequest {
    int64 num = 1;
}

message SquareRootResponse {
    float root = 1;
}

service CalculatorService{
    // unary API
    rpc Calculator(CalculatorRequest) returns (CalculatorResponse){};
    rpc SquareRoot(SquareRootRequest) returns (SquareRootResponse){};
};